--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="projects">
                         <h2>Links to Projects</h2>
-                        <a href="https://github.com/CS150-Fall23/pa8-redteam" id="battleship">Battle Ship</a>
+                        <a href="https://github.com/SuttonU/Battle-Ship" id="battleship">Battle Ship</a>
                         <a href="https://github.com/SuttonU/C-Man" id="cman">Pac-man</a>
                         <a href="Minecraft Redstone Calculator.zip" id="minecraft">Minecraft World Download</a>
                     </div>
