made a few changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <h1><b>Sutton Jones</b></h1>
+                <h1><b>My Portfolio</b></h1>
                 <ul id="sidemenu">
                     <li>
                         <a href="#header">Home</a>
